--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@
 }
 
 body {
-    max-width: 90ch;
+    max-width: 100ch;
     margin: 0 auto;
     line-height: 1.5;
 }
@@ -36,10 +36,13 @@ h2 {
     border-bottom: 0.1em solid #66D7D1;
     padding: 0.25em;
     margin: 1.6em 0;
+    text-shadow: 0.02em 0.04em red;
 }
 
 section p {
     text-indent: 2.8em;
+    padding: 1em;
+    line-height: 1.6em;
 }
 
 .project {
